archivos de citas

--- a/MiceProject/cites/cites.html
+++ b/MiceProject/cites/cites.html
@@ -382,13 +382,33 @@ display: none;
 
 <p>EWSmethods <span class="citation">(Duncan A. O’Brien et al.,
 2023)</span></p>
+<p>cita 1<span class="citation">(Gilbert et al., 2011)</span></p>
+<p>cita 2<span class="citation">(Bush et al., 2017)</span></p>
+<p>paper <span class="citation">(Gonze et al., 2018)</span></p>
 <div id="refs" class="references csl-bib-body hanging-indent" entry-spacing="0" line-spacing="2">
+<div id="ref-Bush2017" class="csl-entry">
+Bush, T., Diao, M., Allen, R. J., Sinnige, R., Muyzer, G., &amp;
+Huisman, J. (2017). Oxic-anoxic regime shifts mediated by feedbacks
+between biogeochemical processes and microbial community dynamics.
+<em>Nature Communications</em>, <em>8</em>(1), 789. <a href="https://doi.org/10.1038/s41467-017-00912-x">https://doi.org/10.1038/s41467-017-00912-x</a>
+</div>
 <div id="ref-ewsmethodsR" class="csl-entry">
 Duncan A. O’Brien, Smita Deb, Sahil Sidheekh, Narayanan Krishnan, Partha
 S. Dutta, &amp; Christopher F. Clements. (2023).
 <span>EWSmethods</span>: An r package to forecast tipping points at the
 community level using early warning signals, resilience measures, and
 machine learning models. In <em>Ecography</em>. <a href="https://doi.org/10.1111/ecog.06674">https://doi.org/10.1111/ecog.06674</a>
+</div>
+<div id="ref-Gilbert2012" class="csl-entry">
+Gilbert, J. A., Steele, J. A., Caporaso, J. G., Steinbrück, L., Reeder,
+J., Temperton, B., Huse, S., McHardy, A. C., Knight, R., Joint, I.,
+Somerfield, P., Fuhrman, J. A., &amp; Field, D. (2011). <span class="nocase">Defining seasonal marine microbial community
+dynamics</span>. <em>The ISME Journal</em>, <em>6</em>(2), 298–308. <a href="https://doi.org/10.1038/ismej.2011.107">https://doi.org/10.1038/ismej.2011.107</a>
+</div>
+<div id="ref-GONZE201841" class="csl-entry">
+Gonze, D., Coyte, K. Z., Lahti, L., &amp; Faust, K. (2018). Microbial
+communities as dynamical systems. <em>Current Opinion in
+Microbiology</em>, <em>44</em>, 41–49. https://doi.org/<a href="https://doi.org/10.1016/j.mib.2018.07.004">https://doi.org/10.1016/j.mib.2018.07.004</a>
 </div>
 </div>
 
