archivos de citas

--- a/MiceProject/cites/cites.html
+++ b/MiceProject/cites/cites.html
@@ -385,12 +385,32 @@ display: none;
 <p>cita 1<span class="citation">(Gilbert et al., 2011)</span></p>
 <p>cita 2<span class="citation">(Bush et al., 2017)</span></p>
 <p>paper <span class="citation">(Gonze et al., 2018)</span></p>
+<p>Early-warning signals for critical transitions <span class="citation">(Scheffer et al., 2009)</span></p>
+<p>Early warning signals of complex critical transitions in
+deterministic dynamics <span class="citation">(Evers et al.,
+2024)</span></p>
+<p>resiliencia <span class="citation">(Scheffer et al., 2015)</span></p>
+<p>Simple tipping or complex transition? Lessons from a green Sahara
+<span class="citation">(Bathiany et al., 2016)</span></p>
+<p>dakos <span class="citation">(Dakos &amp; Bascompte, 2014)</span></p>
 <div id="refs" class="references csl-bib-body hanging-indent" entry-spacing="0" line-spacing="2">
+<div id="ref-bathiany2016simple" class="csl-entry">
+Bathiany, S., Claussen, M., Brovkin, V., Scheffer, M., Dakos, V., &amp;
+Nes, E. van. (2016). Simple tipping or complex transition? Lessons from
+a green sahara. <em>Past Global Changes Magazine</em>, <em>24</em>(1),
+20–21. <a href="https://doi.org/10.22498/pages.24.1.20">https://doi.org/10.22498/pages.24.1.20</a>
+</div>
 <div id="ref-Bush2017" class="csl-entry">
 Bush, T., Diao, M., Allen, R. J., Sinnige, R., Muyzer, G., &amp;
 Huisman, J. (2017). Oxic-anoxic regime shifts mediated by feedbacks
 between biogeochemical processes and microbial community dynamics.
 <em>Nature Communications</em>, <em>8</em>(1), 789. <a href="https://doi.org/10.1038/s41467-017-00912-x">https://doi.org/10.1038/s41467-017-00912-x</a>
+</div>
+<div id="ref-dakos2014critical" class="csl-entry">
+Dakos, V., &amp; Bascompte, J. (2014). Critical slowing down as early
+warning for the onset of collapse in mutualistic communities.
+<em>Proceedings of the National Academy of Sciences</em>,
+<em>111</em>(49), 17546–17551. <a href="https://doi.org/10.1073/pnas.1406326111">https://doi.org/10.1073/pnas.1406326111</a>
 </div>
 <div id="ref-ewsmethodsR" class="csl-entry">
 Duncan A. O’Brien, Smita Deb, Sahil Sidheekh, Narayanan Krishnan, Partha
@@ -398,6 +418,12 @@ S. Dutta, &amp; Christopher F. Clements. (2023).
 <span>EWSmethods</span>: An r package to forecast tipping points at the
 community level using early warning signals, resilience measures, and
 machine learning models. In <em>Ecography</em>. <a href="https://doi.org/10.1111/ecog.06674">https://doi.org/10.1111/ecog.06674</a>
+</div>
+<div id="ref-Evers2024" class="csl-entry">
+Evers, K., Borsboom, D., Fried, E. I., Hasselman, F., &amp; Waldorp, L.
+(2024). Early warning signals of complex critical transitions in
+deterministic dynamics. <em>Nonlinear Dynamics</em>, <em>112</em>(21),
+19071–19094. <a href="https://doi.org/10.1007/s11071-024-10023-0">https://doi.org/10.1007/s11071-024-10023-0</a>
 </div>
 <div id="ref-Gilbert2012" class="csl-entry">
 Gilbert, J. A., Steele, J. A., Caporaso, J. G., Steinbrück, L., Reeder,
@@ -409,6 +435,19 @@ dynamics</span>. <em>The ISME Journal</em>, <em>6</em>(2), 298–308. <a href="h
 Gonze, D., Coyte, K. Z., Lahti, L., &amp; Faust, K. (2018). Microbial
 communities as dynamical systems. <em>Current Opinion in
 Microbiology</em>, <em>44</em>, 41–49. https://doi.org/<a href="https://doi.org/10.1016/j.mib.2018.07.004">https://doi.org/10.1016/j.mib.2018.07.004</a>
+</div>
+<div id="ref-Scheffer2009" class="csl-entry">
+Scheffer, M., Bascompte, J., Brock, W. A., Brovkin, V., Carpenter, S.
+R., Dakos, V., Held, H., Nes, E. H. van, Rietkerk, M., &amp; Sugihara,
+G. (2009). Early-warning signals for critical transitions.
+<em>Nature</em>, <em>461</em>(7260), 53–59. <a href="https://doi.org/10.1038/nature08227">https://doi.org/10.1038/nature08227</a>
+</div>
+<div id="ref-scheffer2015resilience" class="csl-entry">
+Scheffer, M., Carpenter, S. R., Dakos, V., &amp; Nes, E. H. van. (2015).
+Generic indicators of ecological resilience: Inferring the chance of a
+critical transition [Journal Article]. <em>Annual Review of Ecology,
+Evolution, and Systematics</em>, <em>46</em>(Volume 46, 2015), 145–167.
+https://doi.org/<a href="https://doi.org/10.1146/annurev-ecolsys-112414-054242">https://doi.org/10.1146/annurev-ecolsys-112414-054242</a>
 </div>
 </div>
 
